// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > respects block prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-block="block"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Block
    </span>
  </span>
</button>
`;

exports[`Button > respects the alignContent prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="start"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Align start
    </span>
  </span>
</button>
`;

exports[`Button > respects the large size prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="large"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button > respects the small size prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="small"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button > styles danger button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="danger"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Danger
    </span>
  </span>
</button>
`;

exports[`Button > styles invisible button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="invisible"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Invisible
    </span>
  </span>
</button>
`;

exports[`Button > styles primary button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="prc-Button-ButtonBase-Eb8-K"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="primary"
  id="test-button"
  type="button"
>
  <span
    class="prc-Button-ButtonContent-KZ5Bz"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="prc-Button-Label-B1e2-"
      data-component="text"
    >
      Primary
    </span>
  </span>
</button>
`;
